[tool.poetry]
name = "pypkgs_ccc"
version = "0.1.0"
description = "Python Package for the First Individual Assignment"
authors = ["Jason Chang <ja.chang0628@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
